@@ -1,7 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.4.10"
+        version "2.5.4"
     }
     repositories {
         mavenCentral()
@@ -18,7 +18,7 @@ plugins {
     id "groovy"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.4.10"
+    id "org.springframework.boot" version "2.5.4"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "net.ltgt.errorprone" version "1.1.1"
     id "checkstyle"
@@ -26,7 +26,7 @@ plugins {
     id "pmd"
     id "com.github.node-gradle.node" version "3.1.1"
     id "com.gorylenko.gradle-git-properties" version "2.3.1"
-    id "com.energizedwork.webdriver-binaries" version "1.4"
+    id "com.github.erdi.webdriver-binaries" version "2.6"
     id "org.seasar.doma.codegen" version "1.4.1"
 }
 
@@ -131,25 +131,24 @@ dependencyManagement {
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.1.4.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.4.RELEASE/spring-boot-dependencies-2.1.4.RELEASE.pom
-        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
-            bomProperty "groovy.version", "2.5.15"
-        }
-        mavenBom("org.junit:junit-bom:5.7.2")
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+        mavenBom("org.junit:junit-bom:5.8.1")
     }
 }
 
 dependencies {
-    def spockVersion = "1.3-groovy-2.5"
+    def spockVersion = "2.0-groovy-3.0"
     def lombokVersion = "1.18.20"
     def domaVersion = "2.49.0"
     def errorproneVersion = "2.3.4"
-    def powermockVersion = "2.0.7"
     def seleniumVersion = "3.141.59"
     def spotbugsVersion = "4.0.2"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.1.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
-    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-web") {
+        exclude group: "junit", module: "junit"
+    }
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -166,6 +165,8 @@ dependencies {
     }
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
+    testImplementation("org.codehaus.groovy:groovy-sql")
+    testImplementation("org.mockito:mockito-inline")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     implementation("com.integralblue:log4jdbc-spring-boot-starter:2.0.0")
@@ -179,7 +180,9 @@ dependencies {
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
     testImplementation("org.jsoup:jsoup:1.14.3")
-    testImplementation("com.icegreen:greenmail:1.6.5")
+    testImplementation("com.icegreen:greenmail:1.6.5") {
+        exclude group: "junit", module: "junit"
+    }
 
     // for lombok
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
@@ -193,19 +196,11 @@ dependencies {
     errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
     compileOnly("com.google.errorprone:error_prone_annotations:${errorproneVersion}")
 
-    // PowerMock
-    testImplementation("org.powermock:powermock-module-junit4:${powermockVersion}")
-    testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
-
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:4.1") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
+    testImplementation("org.gebish:geb-spock:5.0")
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-support:${seleniumVersion}")
-    testImplementation("org.seleniumhq.selenium:selenium-api:${seleniumVersion}")
-    testImplementation("org.seleniumhq.selenium:selenium-remote-driver:${seleniumVersion}")
 
     // for SpotBugs
     compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}")
@@ -226,25 +221,6 @@ def jvmArgsForTask = [
         "-Dfile.encoding=UTF-8",
         "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
 ]
-// JDK 11 に変更後、test タスク実行時に groovy と powermock が JDKの内部部分にアクセスするためにコードでリフレクションを使用
-// していて WARNING が出るため、JVM の起動時オプションの --add-opens を指定して WARNING が出ないようにする
-def jvmArgsAddOpens = [
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.math=ALL-UNNAMED",
-        "--add-opens=java.base/java.net=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
-        "--add-opens=java.base/java.security=ALL-UNNAMED",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans=ALL-UNNAMED"
-]
 def printTestCount = { desc, result ->
     if (!desc.parent) { // will match the outermost suite
         println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
@@ -253,7 +229,6 @@ def printTestCount = { desc, result ->
 
 bootRun {
     jvmArgs = jvmArgsForTask +
-            jvmArgsAddOpens +
             [
                     "-Dspring.profiles.active=develop",
                     "-XX:TieredStopAtLevel=1"
@@ -262,20 +237,13 @@ bootRun {
 
 tasks.withType(Test) {
     jvmArgs = jvmArgsForTask +
-            jvmArgsAddOpens +
             ["-Dspring.profiles.active=unittest"]
 }
-task testJUnit4AndSpock(type: Test) {
-    // testJUnit4AndSpock タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
-    exclude "geb/**"
-
-    testLogging {
-        afterSuite printTestCount
-    }
-}
-test.dependsOn testJUnit4AndSpock
 test {
     // test タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
+
+    // Geb のテストを test タスクで実行されないようにする
+    exclude "geb/**"
 
     // for JUnit 5
     useJUnitPlatform()
@@ -294,9 +262,17 @@ task npmBuild(type: NpmTask) {
 npmBuild.dependsOn npmTest
 processResources.dependsOn npmBuild
 
+// https://github.com/webdriverextensions/webdriverextensions-maven-plugin-repository/blob/master/repository-3.0.json 参照
 webdriverBinaries {
-    chromedriver "94.0.4606.61"
-    geckodriver "0.30.0"
+    chromedriver {
+        version = "94.0.4606.41"
+        architecture = "X86"
+        fallbackTo32Bit = true
+    }
+    geckodriver {
+        version = "0.29.1"
+        architecture = "X86_64"
+    }
 }
 def drivers = ["chrome", "firefox"]
 drivers.each { driver ->
@@ -305,6 +281,9 @@ drivers.each { driver ->
         outputs.upToDateWhen { false }
         systemProperty "geb.env", driver
         exclude "ksbysample/**"
+
+        // for JUnit 5
+        useJUnitPlatform()
 
         testLogging {
             afterSuite printTestCount
